Add support for persisting variables
Summary:
When a configuration/variable change needs to be persisted, we will now write the variable/value to a new "persistent_vars" proto file. This file will be read during the `Init()` phase of consensus. Actions can be taken based on the values read from the file.

As an example, we add a new variable called `allow_start_election`. Whenever this variable is updates, we will write this to the proto file. On disabling the variable, the peer will not start any election - even if there are heartbeat failures from the leader or is an election is manually requested. Disabling this on all voters in the ring essentially becomes a way to block any elections from going through. Note that if this variable is disabled on the leader and then the leader is restarted, since it comes up as a follower, it won't get a chance to become leader again if for some reason there no other leader is elected in the ring.

Test Plan:
Tested as part of integration tests in fbcode

Reviewers: vinaybhat, arahut, abhinavsharma, mpercy, chili

Subscribers:

Tasks:

Tags:

--- a/src/kudu/consensus/CMakeLists.txt
+++ b/src/kudu/consensus/CMakeLists.txt
@@ -73,6 +73,24 @@ ADD_EXPORTABLE_LIBRARY(consensus_proto
   NONLINK_DEPS ${CONSENSUS_KRPC_TGTS})
 
 #########################################
+# persistent_vars_proto
+#########################################
+
+PROTOBUF_GENERATE_CPP(
+  PERSISTENT_VARS_PROTO_SRCS PERSISTENT_VARS_PROTO_HDRS PERSISTENT_VARS_PROTO_TGTS
+  SOURCE_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../..
+  BINARY_ROOT ${CMAKE_CURRENT_BINARY_DIR}/../..
+  PROTO_FILES
+    persistent_vars.proto)
+set(PERSISTENT_VARS_PROTO_LIBS
+  kudu_common_proto
+  protobuf)
+ADD_EXPORTABLE_LIBRARY(persistent_vars_proto
+  SRCS ${PERSISTENT_VARS_PROTO_SRCS}
+  DEPS ${PERSISTENT_VARS_PROTO_LIBS}
+  NONLINK_DEPS ${PERSISTENT_VARS_PROTO_TGTS})
+
+#########################################
 # log_proto
 #########################################
 
@@ -104,7 +122,8 @@ target_link_libraries(log
   kudu_util_compression
   consensus_proto
   log_proto
-  consensus_metadata_proto)
+  consensus_metadata_proto
+  persistent_vars_proto)
 
 set(CONSENSUS_SRCS
   consensus_meta.cc
@@ -114,6 +133,8 @@ set(CONSENSUS_SRCS
   leader_election.cc
   log_cache.cc
   peer_manager.cc
+  persistent_vars.cc
+  persistent_vars_manager.cc
   pending_rounds.cc
   quorum_util.cc
   raft_consensus.cc
